# Arkanoid_SFML

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
data/Levels/: Level1.tmx  arkanoid.tiled-session
data/Levels/images/PNG/ArkanoidAssets/PowerUps/: powerup.ken
data/Levels/images/tilemap/: ArkanoidSet.tsx
data/Sounds/: copyright.txt
include/Core/: CollisionManager.h  Game.h  InputManager.h  LevelManager.h  Renderer.h  SoundManager.h  World.h
include/Gameplay/: Ball.h  GameObject.h  Paddle.h  PlayerController.h  Powerups.h
include/Render/: SFMLOrthogonalLayer.h
include/Utils/: Constants.h
src/: main.cpp
src/Core/: CollisionManager.cpp  Game.cpp  InputManager.cpp  LevelManager.cpp  Renderer.cpp  SoundManager.cpp  World.cpp
src/Gameplay/: Ball.cpp  Paddle.cpp  PlayerController.cpp  Powerups.cpp
